<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ivestday.view.FragmentTrade">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_2"
        android:layout_width="340dp"
        android:layout_height="140dp">

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/type_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="16dp"
            android:text="@string/type_market"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/type_market"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:id="@+id/purchase_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_price"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/type_market"
            app:layout_constraintLeft_toRightOf="@id/purchase_price"
            android:id="@+id/purchase_price_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_price_change"
            android:textSize="12sp"
            android:textColor="@color/black"/>

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="14dp"
            android:layout_marginRight="16dp"
            android:id="@+id/asset_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asset_change_price"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginEnd="16dp" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/purchase_price_change"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counts"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/counts"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:id="@+id/number_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counts_number"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/purchase_price"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginRight="16dp"
            android:id="@+id/invest_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invest_text"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginEnd="16dp" />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/invest_text"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:id="@+id/invest_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invest_number"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>