<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MAIN_FRAME_LOGIN_UP"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ivestday.view.Autoris">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/main_background">

        <FrameLayout
            android:id="@+id/main_frame"
            android:layout_width="340dp"
            android:layout_height="425dp"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:background="@drawable/rounded_for_main">

            <EditText
                android:id="@+id/edit_text_login"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="147dp"
                android:paddingHorizontal="16dp"
                android:hint="@string/hint_username"
                android:inputType="textPersonName"
                android:background="@drawable/rounded"
                android:maxLength="20"
                /> <!--android:text="@={UserViewModel.user_m.login}"-->

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="227dp"
                android:paddingHorizontal="16dp"
                android:hint="@string/hint_pass"
                android:background="@drawable/rounded"
                android:maxLength="20"
                android:inputType="textPassword"
                /> <!--android:text="@={UserViewModel.user_m.password}"-->

            <Button
                android:id="@+id/Button"
                android:layout_width="250dp"
                android:layout_height="36dp"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="332dp"
                android:background="@drawable/rounded"
                android:gravity="center_horizontal"
                android:text="@string/enter"
                android:textColor="@color/black"
                app:backgroundTint="@color/main_background"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="21dp"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="15dp"
                android:visibility="visible"
                app:srcCompat="@drawable/application">
            </ImageView>

            <TextView
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="49dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="28dp">

            </TextView>

            <TextView
                android:layout_width="200dp"
                android:layout_height="17dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="399dp"
                android:text="@string/reg_if_not"
                android:textAlignment="center"
                android:textColor="#616161"
                android:textSize="12dp">

            </TextView>

        </FrameLayout>

        <Button
            android:id="@+id/containedButton"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_reg"
            android:backgroundTint="@color/main_2"
            android:text="@string/reg"
            android:textColor="@color/black"
            app:backgroundTint="@color/main_3"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />
    </LinearLayout>

</FrameLayout>

